<resources>
    <string name="app_name">Hola Mundo 05</string>
    <string name="login_title">Mi App Android</string>
    <string name="name_hint">Escriba su nombre</string>
    <string name="hint_password">Escriba su contraseña</string>
    <string name="enter">Ingresar</string>
    <string name="exit">Salir</string>
    <string name="calculate_avg">Calcular promedio</string>
    <string name="first_number">Ingrese el primer número</string>
    <string name="second_number">Ingrese el segundo número</string>
    <string name="third_number">Ingrese el tercer número</string>
    <string name="calculate">Calcular</string>
    <string name="zero_avg">Promedio = 0</string>
    <string name="avg_equals">Promedio = %1$s</string>
    <string name="warning_all_numbers">Debes ingresar todos los números</string>
    <string name="name">Nombres</string>
    <string name="test_form">FORMULARIO DE PRUEBA</string>
    <string name="person_data">Datos Personales</string>
    <string name="lastname">Apellidos</string>
    <string name="hint_lastname">Escriba sus apellidos</string>
    <string name="address">Direccción</string>
    <string name="hint_address">Escriba su dirección</string>
    <string name="phone">Teléfono</string>
    <string name="hint_phone">Escriba su teléfono</string>
    <string name="birthday">Fecha nacimiento</string>
    <string name="hint_birthday">Escriba fecha nacimiento</string>
    <string name="clear">Limpiar</string>
    <string name="save">Guardar</string>
    <string name="form">Formulario</string>
    <string name="contacts">Contactos</string>
    <string name="contact_example">Pepito Perez</string>
    <string name="phone_example">31526489652</string>
    <string name="do_order">Realizar Pedido</string>
    <string name="order">Pedido</string>
    <string name="chicken">Pollo</string>
    <string name="salami">Salami</string>
    <string name="ham">Jamón</string>
    <string name="strOrderBase">Pedido realizado con los siguientes ingredientes: </string>
    <string name="special_pizza">Pizza especial</string>
    <string name="home_pizza">Deliciosa pizza de la casa</string>
    <string name="pizza_description">Pizza de carnes especialmente preparada por el restaurante a partir de los ingredientes seleccionados.</string>
    <string name="update">Actualizar</string>
    <string name="delete">Eliminar</string>
    <string name="update_contact">Actualizar contacto</string>
    <string name="new_user">Nuevo usuario</string>
    <string name="cancel">Cancelar</string>
    <string name="user_name">Nombre usuario</string>
    <string name="password">Contraseña</string>
</resources>