<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NewUserActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="6"
        android:background="@color/primaryLightColor"
        android:elevation="50dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/new_user"
            android:textSize="30sp"
            android:gravity="center"
            android:textColor="@color/primaryTextColor"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_marginTop="100dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100sp"
            android:padding="25dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Nombre usuario"
                android:layout_weight="2"
                android:textSize="20sp"/>
            <EditText
                android:id="@+id/etNewUser"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/name_hint"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100sp"
            android:padding="25dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/password"
                android:layout_weight="2"
                android:textSize="20sp"/>
            <EditText
                android:id="@+id/etNewPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/hint_password"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100sp"
            android:padding="25dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnNewUser"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/save"
                android:layout_marginEnd="10dp"
                android:onClick="createUser"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/btnCancelUser"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/cancel"
                android:layout_marginStart="10dp"
                android:layout_weight="1"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>