<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

  <TextView
      android:id="@+id/tvTitleLogin"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:fontFamily="sans-serif-black"
      android:rotation="2"
      android:rotationX="21"
      android:rotationY="17"
      android:text="@string/login_title"
      android:textAlignment="center"
      android:textColor="#E23F51B5"
      android:textSize="40sp"
      android:layout_marginStart="50dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.498"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.153" />

  <ImageView
      android:id="@+id/ivLoginPicture"
      android:layout_width="296dp"
      android:layout_height="196dp"
      android:layout_marginTop="52dp"
      android:src="@drawable/cat"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tvTitleLogin" />

  <EditText
      android:id="@+id/etPersonName"
      android:layout_width="350dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="40dp"
      android:ems="10"
      android:inputType="textPersonName"
      android:text=""
      android:hint="@string/name_hint"
      android:textSize="30sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.497"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/ivLoginPicture" />

  <EditText
      android:id="@+id/etPassword"
      android:layout_width="350dp"
      android:layout_height="0dp"
      android:layout_marginTop="10dp"
      android:ems="10"
      android:inputType="textPassword"
      android:hint="@string/hint_password"
      android:textSize="30sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.497"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/etPersonName" />

  <Button
      android:id="@+id/btnLogin"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:fontFamily="sans-serif-condensed"
      android:onClick="goToMain"
      android:text="@string/enter"
      android:textSize="20sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/etPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>